--- a/src/components/FriendCard/FriendCard.css
+++ b/src/components/FriendCard/FriendCard.css
@@ -3,5 +3,5 @@
     height: 150px;
     margin: 15px 45px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-    border: 3px solid white;
+    border: 3px solid #c78f15;
   }
